2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/ajax/agent.php
	operation/agentes/exportdata.php: Fixed agent autocomplete 
	functionality.

2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Fixed html render of combined 
	graphs.

2011-11-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_modules.php: Fixed massive
	module edition to not break module group, export id etc 
	when edit another field

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* install.php: Fixed width style in step 2.
	
	Fixes: #3421097

2011-11-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php: Fixed filter of the operation
	agents view for bug 3445244

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	include/functions_graph.php: Fixed PDF exportation of combined 
	graphs.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Resized graph in this view.
	
	Fixed: #3411788

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php: Added check for flash charts in pdf
	exportation.
	* operation/events/events_validate.php: Removed entities in this 
	view.

	Fixes: #3445106

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/setup_visuals.php: Added custom logo in visual 
	styles.

	Fixes: #3419712

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events.php: Fixed sound event popup over https.
	
	Fixes: #3443835

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_reporting.php: Removed entities in events 
	reports.
	
	Fixes: #3445082

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_reporting.php: Fixed custom graphs in preview 
	 reporting and PDF exportation.
	 
	 Fixes: #3444170
