@@ -1,3 +1,8 @@
+2011-11-30  Sergio Martin <sergio.martin@artica.es>
+
+	* include/graphs/functions_gd.php: Fixed rounded corners 
+	progress bar whit mode=1 and ratio < 30
+
 2011-11-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/ajax/agent.php
